Added Identity Server 4 to a project Made basic configs for IS4 project in solution Added basic controller (AccountsController) for authorization methods and everything related to doing smth with user's account

--- a/Systems/Api/NovaRecipesProject.Api/Pages/Index.cshtml
+++ b/Systems/Api/NovaRecipesProject.Api/Pages/Index.cshtml
@@ -16,8 +16,8 @@
             <a class="d-block mb-2" href="/api/index.html">API description</a>
         }
 
-@*        <a class="d-block mb-2" href="/.well-known/openid-configuration">OpenId configuration</a>
-*@
+        @*<a class="d-block mb-2" href="/.well-known/openid-configuration">OpenId configuration</a>*@
+
     </div>
     <div class="text-info position-absolute" style="right: 15px; bottom: 15px; color: coral !important;">
         @Model.Version
