--- a/Systems/Api/NovaRecipesProject.Api/Pages/_ViewImports.cshtml
+++ b/Systems/Api/NovaRecipesProject.Api/Pages/_ViewImports.cshtml
@@ -1,3 +1,2 @@
-﻿@using NovaRecipesProject.Cats
-@namespace NovaRecipesProject.Cats.Pages
+﻿@namespace NovaRecipesProject.Api.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
